--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\larag\\AppData\\Roaming\\NetBeans\\27\\build.properties
+user.properties.file=C:\\Users\\Gui\\AppData\\Roaming\\NetBeans\\27\\build.properties
